# PodatkovneStrukture

./: CMakeLists.txt  Naloga1.h  Naloga1Test.cpp
Naloga1/: Naloga1.h  Naloga1Test.cpp  Tomic_Danijel_1002619122_N1.cpp
Naloga2/: Naloga2.h  Naloga2Test.cpp  Tomic_Danijel_1002619122_N2.cpp
Naloga3/: Tomic_Danijel_1002619122_N3.cpp
Naloga4/: Tomic_Danijel_1002619122_N4.cpp
Naloga5/: Tomic_Danijel_1002619122_N5.cpp
